Fix dialog z-index

--- a/src/components/AppDialog/index.scss
+++ b/src/components/AppDialog/index.scss
@@ -68,5 +68,5 @@
 }
 
 .ant-modal-wrap {
-  z-index: 99999999999999999999999999999;
+  z-index: 999999999999999;
 }
